--- a/www/src/sass/_footer.scss
+++ b/www/src/sass/_footer.scss
@@ -14,10 +14,8 @@ footer {
 }
 
 .contact-us {
-  text-align: right;
-  position: absolute;
-  right: 15px;
-  top: -9px;
+  text-align: center;
+  margin-top: 1em;
   .icon {
     color: $primary-color;
     box-shadow: 0 0 0 3px $secondary-color-dark;
@@ -43,18 +41,19 @@ footer {
   }
 }
 
+@media (min-width: $screen-md-min) {
+  .contact-us {
+    text-align: right;
+    position: absolute;
+    right: 15px;
+    top: -9px;
+    margin: 0;
+  }
+}
+
 @media (max-width: 767px) {
   .copyright {
     text-align: center;
     display: block;
-  }
-  .contact-us {
-    display: block;
-    text-align: center;
-    float: none;
-    margin: 15px 0;
-    a {
-      margin: 10px;
-    }
   }
 }
