--- a/www/src/sass/_player.scss
+++ b/www/src/sass/_player.scss
@@ -1,4 +1,9 @@
 #block-player {
+  #player-youtube {
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 3em;
+  }
   margin-top: -52px;
   padding-top: 52px;
   #aside-player {
@@ -102,6 +107,16 @@
           }
         }
       }
+    }
+  }
+}
+
+@media (min-width: $screen-sm-min) {
+  #block-player {
+    #player-youtube {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 3em;
     }
   }
 }
