--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -643,8 +643,121 @@ p.link-initial a:focus {
   background: #777;
 }
 
+#candidates {
+  padding: 0;
+  padding-bottom: 5em;
+}
+
+#candidates .name {
+  font-size: 0;
+  -webkit-transition: all ease .2s;
+  transition: all ease .2s;
+  opacity: 0;
+}
+
+#candidates .name.first {
+  font-family: 'Open Sans Regular', Helvetica, Arial, sans-serif;
+  text-transform: capitalize;
+  color: #f5f5f5;
+}
+
+#candidates .name.last {
+  font-family: 'Open Sans Bold', Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  color: #2c2c2c;
+}
+
+#candidates img {
+  width: 100%;
+}
+
+#candidates .no-padding {
+  padding: 0;
+}
+
+#candidates .list-candidates {
+  padding: 0 30px;
+}
+
+#candidates .list-candidates .overflow-hidden {
+  overflow: hidden;
+}
+
+#candidates .list-candidates figure {
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+
+#candidates .list-candidates figure.img-small-left {
+  padding-left: 0;
+}
+
+#candidates .list-candidates figure.img-small-right {
+  padding-right: 0;
+}
+
+#candidates .list-candidates figure img {
+  width: 100%;
+  height: auto;
+}
+
+#candidates .list-candidates figure figcaption {
+  position: absolute;
+  z-index: 100;
+  bottom: 2em;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  text-align: center;
+}
+
+#candidates .list-candidates figure:hover .name,
+#candidates .list-candidates figure:focus .name {
+  font-size: 2.571rem;
+  opacity: 1;
+}
+
+#candidates .list-candidates figure:hover:before,
+#candidates .list-candidates figure:focus:before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-right: 15px;
+  content: '';
+  -webkit-animation: SmoothOver .3s linear;
+          animation: SmoothOver .3s linear;
+  background: url('../img/background-hover.png') center center/cover;
+}
+
+@-webkit-keyframes SmoothOver {
+  0% {
+    bottom: -100%;
+  }
+
+  100% {
+    bottom: 0;
+  }
+}
+
+@keyframes SmoothOver {
+  0% {
+    bottom: -100%;
+  }
+
+  100% {
+    bottom: 0;
+  }
+}
+
 @media (min-width: 768px) {
   #vote-activities h1 img {
+    width: initial;
+  }
+
+  #candidates img {
     width: initial;
   }
 }
