--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -24,7 +24,7 @@
 @font-face {
   font-family: 'icomoon';
 
-    src: url('../fonts/icomoon.ttf?mif2iq') format('truetype'), url('../fonts/icomoon.woff?mif2iq') format('woff');
+    src: url('../fonts/icomoon.ttf?v1966g') format('truetype'), url('../fonts/icomoon.woff?v1966g') format('woff');
 }
 
 [class^='icon-'],
@@ -76,6 +76,10 @@
   text-transform: none;
   speak: none;
   -webkit-font-smoothing: antialiased;
+}
+
+.icon-youtube:before {
+  content: '\e907';
 }
 
 .icon-vote:before {
@@ -512,6 +516,175 @@ p.link-initial a:focus {
   padding-top: 0;
 }
 
+#homepage-modal {
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background: rgba(0, 0, 0, .5);
+}
+
+#homepage-modal #player-youtube {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  padding: 0;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation: SmoothClick .75s linear;
+          animation: SmoothClick .75s linear;
+}
+
+@-webkit-keyframes SmoothClick {
+  0% {
+    -webkit-transform: translate(-50%, -50%) scale(0);
+            transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes SmoothClick {
+  0% {
+    -webkit-transform: translate(-50%, -50%) scale(0);
+            transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+}
+
+#candidats .left-column img {
+  width: 100%;
+  height: auto;
+}
+
+#candidats .right-column .candidat-profil-description {
+  padding: 40px;
+  color: #777;
+  background: #f5f5f5;
+  box-shadow: inset 0 -40px 78px -7px rgba(0, 0, 0, .2);
+}
+
+#candidats .right-column .candidat-profil-description a {
+  text-decoration: none;
+}
+
+#candidats .right-column .candidat-profil-description .icon-heart-like {
+  font-size: 3.7rem;
+  cursor: pointer;
+  color: #d1aa03;
+}
+
+#candidats .right-column .candidat-profil-description .icon-heart-like:hover,
+#candidats .right-column .candidat-profil-description .icon-heart-like:focus {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+#candidats .right-column .candidat-profil-description .like-me-a-lot {
+  font-family: 'Montserrat Regular', Helvetica, Arial, sans-serif;
+  font-size: 2rem;
+  position: relative;
+  bottom: 10px;
+  padding-left: 1em;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+#candidats .right-column .candidat-profil-description .age {
+  font-family: 'Montserrat Bold', Helvetica, Arial, sans-serif;
+  font-size: 2.5rem;
+  position: relative;
+  bottom: 10px;
+  margin: 0 .5em;
+  padding: 0 25px;
+}
+
+#candidats .right-column .candidat-profil-description .age span:last-of-type {
+  font-family: 'Montserrat Regular', Helvetica, Arial, sans-serif;
+  font-size: 2rem;
+}
+
+#candidats .right-column .candidat-profil-description .country,
+#candidats .right-column .candidat-profil-description .astro {
+  font-family: 'Montserrat Regular', Helvetica, Arial, sans-serif;
+  font-size: 3rem;
+  position: relative;
+  bottom: 10px;
+  margin: 0 .5em;
+}
+
+#candidats .right-column .candidat-profil-description .country span:last-of-type,
+#candidats .right-column .candidat-profil-description .astro span:last-of-type {
+  font-size: 2rem;
+  padding-left: 25px;
+}
+
+#candidats .right-column .candidat-profil-description .icon-facebook,
+#candidats .right-column .candidat-profil-description .icon-twitter,
+#candidats .right-column .candidat-profil-description .icon-youtube,
+#candidats .right-column .candidat-profil-description .icon-instagram {
+  font-size: 4rem;
+  position: relative;
+  top: 10px;
+  margin: 5px;
+  padding: .2em;
+  color: #fff;
+  border-radius: 50%;
+}
+
+#candidats .right-column .candidat-profil-description .icon-facebook {
+  margin-left: 1em;
+  background: #3a5897;
+}
+
+#candidats .right-column .candidat-profil-description .icon-facebook:hover,
+#candidats .right-column .candidat-profil-description .icon-facebook:focus {
+  background: #334d85;
+}
+
+#candidats .right-column .candidat-profil-description .icon-twitter {
+  background: #00abed;
+}
+
+#candidats .right-column .candidat-profil-description .icon-twitter:hover,
+#candidats .right-column .candidat-profil-description .icon-twitter:focus {
+  background: #0099d4;
+}
+
+#candidats .right-column .candidat-profil-description .icon-youtube {
+  background: #c6312c;
+}
+
+#candidats .right-column .candidat-profil-description .icon-youtube:hover,
+#candidats .right-column .candidat-profil-description .icon-youtube:focus {
+  background: #b12c27;
+}
+
+#candidats .right-column .candidat-profil-description .icon-instagram {
+  background: #000;
+}
+
+#candidats .right-column .candidat-profil-description .icon-instagram:hover,
+#candidats .right-column .candidat-profil-description .icon-instagram:focus {
+  background: black;
+}
+
 .rs-connect {
   display: block;
   width: 100%;
@@ -805,6 +978,7 @@ p.link-initial a:focus {
 }
 
 #block-player #aside-player .slide-candidates .candidate img {
+  width: 80%;
   border: 4px solid #d1aa03;
   border-radius: 50%;
 }
