--- a/www/src/sass/_player.scss
+++ b/www/src/sass/_player.scss
@@ -14,6 +14,7 @@
         img {
           border: 4px solid $primary-color;
           border-radius: 50%;
+          width: 80%;
         }
         margin: 1em auto;
         border-bottom: 1px solid $secondary-color-dark;
