--- a/www/landing/src/assets/sass/_content.scss
+++ b/www/landing/src/assets/sass/_content.scss
@@ -4,6 +4,25 @@
   font-size: 16px;
 }
 
+.btn-out-form {
+  width: 197px;
+  height: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: #a08308;
+  border-style: none;
+  border-radius: 50px;
+  background-color: #fff;
+  display: inline-block;
+  text-align: center;
+  line-height: 50px;
+  &:focus,
+  &:hover {
+    background: #f5f5f5;
+    text-decoration: none;
+  }
+}
+
 @media (max-width: 767px) {
   .container {
     padding-left: 0;
