--- a/www/landing/src/assets/sass/_form.scss
+++ b/www/landing/src/assets/sass/_form.scss
@@ -7,6 +7,10 @@ input[type="submit"] {
   border-style: none;
   margin-top: 30px;
   margin-bottom: 30px;
+  &:hover,
+  &:focus {
+    background: #f5f5f5;
+  }
 }
 
 #mc_embed_signup {
